# Stencil

./: .gitignore  CMakeLists.txt  assmb_stadistics.sh  benchmark.sh  benchmark2Domp.sh  benchmark2Dseq.sh  benchmark3D.sh  benchmark3Dcompilers.sh  benchmark3Domp.sh  benchmark3DperCore.sh  benchmark3Dsizes.sh
R/Stencil/: .RData  .Rhistory  plot_counters.R
cmake/: FindCilk.cmake  FindCilk.cpp  cimg.cmake  gtest.cmake
code/: CMakeLists.txt
code/include/: bufferSet.h  dispatch.h  hyperspace.h  kernel.h  kernels_1D.h  kernels_2D.h  kernels_3D.h  new_rec_stencil.h  print.h  rec_stencil.h  rec_stencil_inline.h  rec_stencil_inverted_dims.h  rec_stencil_inverted_dims_by_dim.h  rec_stencil_multiple_splits.h  rec_stencil_multiple_splits_by_dimension.h  timer.h  tools.h
code/include/tools/: instrument.h  stopwatch.h
code/include/unused/: rec_stencil.h  rec_stencil_inverted_dims.h  rec_stencil_inverted_dims_by_dim.h  rec_stencil_multiple_splits.h  rec_stencil_multiple_splits_by_dimension.h
code/src/: image2D.cxx  main1D.cxx  main2D.cxx  main3D.cxx
code/test/: buffer.cc  hyperspace.cc  kernel.cc  recursive_stencil.cc  time_call.cc
include/: bufferSet.h  dispatch.h  hyperspace.h  kernel.h  kernels_2D.h  kernels_3D.h  print.h  rec_stencil.h  rec_stencil2.h  rec_stencil_inline.h  rec_stencil_inverted_dims.h  timer.h  tools.h
src/: main.cpp  main2D.cxx  main3D.cxx
test/: buffer.cc  hyperspace.cc  kernel.cc  recursive_stencil.cc  thread_pool.cc
